--- a/writing quickstart/writing quickstart.html
+++ b/writing quickstart/writing quickstart.html
@@ -70,8 +70,10 @@
             <section>
                 <h2>Part 3 Verse 2</h2>
 
-                <p>The list continues:</p>
+                <p>The list continues</p>
 
+                <h3>As quoted to me by our reporter</h3>
+                
                 <ul>
                     <li>Health service glasses</li>
                     <li>Gigolos and brases</li>
